--- a/spark/sssp/pom.xml
+++ b/spark/sssp/pom.xml
@@ -110,17 +110,22 @@
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-core_2.10</artifactId>
-      <version>1.5.2</version>
+      <version>1.6.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-common</artifactId>
+      <version>2.7.2</version>
     </dependency>
     <dependency>
       <groupId>org.apache.spark</groupId>
       <artifactId>spark-graphx_2.10</artifactId>
-      <version>1.5.2</version>
+      <version>1.6.0</version>
     </dependency>
     <dependency>
 	  <groupId>org.scalatest</groupId>
       <artifactId>scalatest_2.10</artifactId>
-	  <version>2.2.5</version>
+	  <version>2.2.6</version>
     </dependency>
     <dependency>
       <groupId>org.scalatest</groupId>
